--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,11 @@
 *_netcdfs/
 snapshots*/
 
+# ignore all netcdf files
+*.nc
+
+# ignore particle output data
+out-*/
 
 # Created by https://www.toptal.com/developers/gitignore/api/jupyternotebooks,python,macos
 # Edit at https://www.toptal.com/developers/gitignore?templates=jupyternotebooks,python,macos
