--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@
 # ignore the folders containing simulation snapshots
 snapshots/
 
+# ignore folder containing MATLAB data
+mat/
+
 # ignore all netcdf files
 *.nc
 
