Particle simulation for missing buoy

--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,9 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+
+### VisualStudioCode ###
+.vscode/*
+!.vscode/tasks.json
+!.vscode/launch.json
+*.code-workspace
