--- a/parcels_configs/tijuana_now.json
+++ b/parcels_configs/tijuana_now.json
@@ -10,7 +10,7 @@
 			{
 				"name": "InterpolationStep",
 				"args": {
-					"references": [1, 0]
+					"references": ["USWC_2KM_HOURLY", "USWC_6KM_HOURLY"]
 				}
 			},
 			{
@@ -19,7 +19,6 @@
 			}
 		]
 	},
-	"save_snapshots": true,
 	"parcels_config": {
 		"save_dir_pfile": "/Volumes/T7/Documents/Programs/scripps-cordc/parcels_westcoast/particledata",
 		"particle_type": "ThreddsParticle",
@@ -27,6 +26,7 @@
 		"time_range": ["START", "END"],
 		"repeat_dt": 7200,
 		"repetitions": -1,
+		"instances_per_spawn": 1,
 		"spawn_points": [
 			[32.551707, -117.138],
 			[32.557, -117.138]
@@ -41,6 +41,7 @@
 			"lon_var": "lonz0"
 		}
 	},
+	"save_snapshots": true,
 	"plotting_config": {
 		"shown_domain": null,
 		"save_dir_snapshots": "/Volumes/T7/Documents/Programs/scripps-cordc/parcels_westcoast/snapshots",
