--- a/parcels_configs/tijuana_now.json
+++ b/parcels_configs/tijuana_now.json
@@ -1,23 +1,24 @@
 {
 	"name": "tijuana_now",
-	"netcdf_path": {
-		"type": "thredds",
-		"path": "http://hfrnet-tds.ucsd.edu/thredds/dodsC/HFR/USWC/1km/hourly/RTV/HFRADAR_US_West_Coast_1km_Resolution_Hourly_RTV_best.ncd",
-		"time_range": ["2020-06-16T21", "2020-06-23T21"],
-		"lat_range": [32.524, 32.75],
-		"lon_range": [-117.32, -117.09],
-		"gapfill_steps": [
-			{
-				"name": "InterpolationStep",
-				"args": {
-					"references": ["USWC_2KM_HOURLY", "USWC_6KM_HOURLY"]
+	"netcdf_data": {
+		"ocean": {
+			"path": "http://hfrnet-tds.ucsd.edu/thredds/dodsC/HFR/USWC/1km/hourly/RTV/HFRADAR_US_West_Coast_1km_Resolution_Hourly_RTV_best.ncd",
+			"time_range": ["2020-06-16T21", "2020-06-23T21"],
+			"lat_range": [32.524, 32.75],
+			"lon_range": [-117.32, -117.09],
+			"gapfill_steps": [
+				{
+					"name": "InterpolationStep",
+					"args": {
+						"references": ["USWC_2KM_HOURLY", "USWC_6KM_HOURLY"]
+					}
+				},
+				{
+					"name": "SmoothnStep",
+					"args": {}
 				}
-			},
-			{
-				"name": "SmoothnStep",
-				"args": {}
-			}
-		]
+			]
+		}
 	},
 	"parcels_config": {
 		"save_dir_pfile": "particledata",
