--- a/environment.yml
+++ b/environment.yml
@@ -10,6 +10,7 @@ dependencies:
   - jupyter=1.0.0
   - parcels=2.3.0
   - scipy=1.7.1
+  - seaborn=0.12.0
   - shapely=1.7.1
   - xarray=0.19.0
 prefix: /opt/miniconda3/envs/py3-parcels
