--- a/configs/tijuana_2020-03_alongshore.yaml
+++ b/configs/tijuana_2020-03_alongshore.yaml
@@ -17,7 +17,7 @@ parcels_config:
   kernels:
     - pyplume.kernels.AdvectionRK4BorderCheck
     - pyplume.kernels.AgeParticle
-    - pyplume.kernels.RandomWalk
+    - pyplume.kernels.RandomWalk5cm
   time_range:
     - START
     - END
