--- a/configs/tijuana_2020-03_alongshore.yaml
+++ b/configs/tijuana_2020-03_alongshore.yaml
@@ -1,13 +1,13 @@
 netcdf_data:
   ocean:
-    path: data/field_netcdfs/tj_plume_1km_2020-03.nc
+    data: data/field_netcdfs/tj_plume_1km_2020-03.nc
     gapfill_steps:
       - path: pyplume.gapfilling.InterpolationStep
         args:
           references:
             - USWC_2KM_HOURLY
             - USWC_6KM_HOURLY
-      - path: pyplume.gapfilling.SmoothnStep
+      - path: pyplume.gapfilling.DCTPLSStep
         args:
           mask: data/field_netcdfs/tj_plume_1km_2020-03_mask.npy
   alongshore: data/field_netcdfs/tijuana_alongshore.nc
@@ -40,12 +40,12 @@ plotting_config:
     - path: pyplume.plot_features.NanSeparatedFeature
       label: coastline
       args:
-        path: data/coastOR2Mex_tijuana.mat
+        data: data/coastOR2Mex_tijuana.mat
         color: k
     - path: pyplume.plot_features.StationFeature
       label: station
       args:
-        path: data/wq_stposition.mat
+        data: data/wq_stposition.mat
         labels:
           - Coronado (North Island)
           - Silver Strand
