--- a/configs/tijuana_2020-03_alongshore.yaml
+++ b/configs/tijuana_2020-03_alongshore.yaml
@@ -2,14 +2,15 @@ netcdf_data:
   ocean:
     data: data/field_netcdfs/tj_plume_1km_2020-03.nc
     gapfill_steps:
-      - path: pyplume.gapfilling.InterpolationStep
+      # - path: pyplume.gapfilling.LowResOversample
+      #   args:
+      #     references: [USWC_2KM_HOURLY, USWC_6KM_HOURLY]
+      # - path: pyplume.gapfilling.DCTPLS
+      #   args:
+      #     exclude_oob: true
+      - path: pyplume.gapfilling.DINEOF
         args:
-          references:
-            - USWC_2KM_HOURLY
-            - USWC_6KM_HOURLY
-      - path: pyplume.gapfilling.DCTPLSStep
-        args:
-          mask: data/field_netcdfs/tj_plume_1km_2020-03_mask.npy
+          exclude_oob: true
   alongshore: data/field_netcdfs/tijuana_alongshore.nc
 parcels_config:
   save_dir: results
