--- a/configs/tijuana_2020-03_slipmask.yaml
+++ b/configs/tijuana_2020-03_slipmask.yaml
@@ -2,7 +2,7 @@ netcdf_data:
   ocean:
     data: data/field_netcdfs/tj_plume_1km_2020-03.nc
     gapfill_steps:
-      - path: pyplume.gapfilling.InterpolationStep
+      - path: pyplume.gapfilling.LowResOversample
         args:
           references:
             - USWC_2KM_HOURLY
