--- a/configs/tijuana_2020-03_alongshore.yaml
+++ b/configs/tijuana_2020-03_alongshore.yaml
@@ -5,12 +5,12 @@ netcdf_data:
       # - path: pyplume.gapfilling.LowResOversample
       #   args:
       #     references: [USWC_2KM_HOURLY, USWC_6KM_HOURLY]
-      # - path: pyplume.gapfilling.DCTPLS
-      #   args:
-      #     exclude_oob: true
-      - path: pyplume.gapfilling.DINEOF
+      - path: pyplume.gapfilling.DCTPLS
         args:
           exclude_oob: true
+      # - path: pyplume.gapfilling.DINEOF
+      #   args:
+      #     exclude_oob: true
   alongshore: data/field_netcdfs/tijuana_alongshore.nc
 parcels_config:
   save_dir: results
