--- a/configs/ny_hurrhenri.yaml
+++ b/configs/ny_hurrhenri.yaml
@@ -1,5 +1,5 @@
-netcdf_data:
-  ocean:
+ocean_data:
+  - name: hfrnet
     data: USEC_6KM_HOURLY
     datasource: pyplume.thredds_data.SRC_THREDDS_HFRNET_UCSD
     domain:
@@ -14,6 +14,25 @@ netcdf_data:
       # hurrican henri timespan (cat 1 hurricane/tropical storm near new york)
       - 2021-08-21T12:00
       - 2021-08-23T18:00
+    boundary_condition: freeslip
+  - name: hycom
+    data: data/field_netcdfs/hycom_hurrhenri.nc
+    # data: GLOBAL_HINDCAST
+    # datasource: pyplume.thredds_data.SRC_THREDDS_HYCOM
+    # domain:
+    #   # rough estimate of available HFRNet data near New York
+    #   # southwest: 38.162201, -75.709632
+    #   # northeast: 41.520008, -69.723751
+    #   S: 38.162201
+    #   N: 41.520008
+    #   # W: -75.709632
+    #   # E: -69.723751
+    #   W: 284.290368
+    #   E: 290.276249
+    # time_range:
+    #   # hurrican henri timespan (cat 1 hurricane/tropical storm near new york)
+    #   - 2021-08-21T12:00
+    #   - 2021-08-23T18:00
     boundary_condition: freeslip
 parcels_config:
   save_dir: results
