--- a/configs/palau-sarop-2023-03.yaml
+++ b/configs/palau-sarop-2023-03.yaml
@@ -1,24 +1,37 @@
-netcdf_data:
-  ocean:
-    data: data/field_netcdfs/FMRC_GLBy0.08_930_FMRC_best (2).nc4
-    datasource: pyplume.thredds_data.SRC_THREDDS_HYCOM
+ocean_data:
+  - name: copernicus
+    data: data/field_netcdfs/cmems_mod_glo_phy_anfc_merged-uv_PT1H-i_1677893029445.nc
     allow_time_extrapolation: true
-    time_range: [2023-03-03T03, 2023-03-06T23]
+    time_range: [2023-03-03T03, 2023-03-04T06]
+    # gapfill_steps:
+    #   # DCT-PLS gapfilling. It's very aggressive on smoothing.
+    #   - path: pyplume.gapfilling.DCTPLS
+    #     args:
+    #       exclude_oob: false
+    wind:
+      data: data/winds1.mat
+      ratio: 0.15
+      incoming: False
+  - name: hycom
+    data: data/field_netcdfs/FMRC_GLBy0.08_930_FMRC_best (2).nc4
+    # datasource: pyplume.thredds_data.SRC_THREDDS_HYCOM
+    allow_time_extrapolation: true
+    time_range: [2023-03-03T03, 2023-03-04T06]
     # gapfill_steps:
       # - path: pyplume.gapfilling.DCTPLS
       #   args:
       #     exclude_oob: false
-  wind:
-    path: data/winds1.mat
-    ratio: 0.03
-    add_to_field_directly: true
+    wind:
+      data: data/winds1.mat
+      ratio: 0.15
+      incoming: False
 parcels_config:
   save_dir: results
   particle_type: pyplume.kernels.ThreddsParticle
   kernels:
     - parcels.AdvectionRK4
     - pyplume.kernels.RandomWalk5cm
-  time_range: [2023-03-03T03, 2023-03-06T23]
+  time_range: [2023-03-03T03, 2023-03-04T06]
   repeat_dt: 3600
   repetitions: 3
   instances_per_spawn: 1
@@ -42,3 +55,8 @@ plotting_config:
       args:
         data: data/palaucoastline1.mat
         color: k
+    - path: pyplume.plot_features.ScatterPlotFeature
+      label: rescue_pos
+      args:
+        data: [6.713889, 133.6439]
+        color: r
