--- a/configs/tijuana_hurrkay.yaml
+++ b/configs/tijuana_hurrkay.yaml
@@ -1,5 +1,5 @@
-netcdf_data:
-  ocean:
+ocean_data:
+  - name: hfrnet uwls
     data: data/field_netcdfs/tj_plume_1km_2022-09.nc
     # Hurricane Kay timespan
     time_range: [2022-09-08T06:00, 2022-09-12T00:00]
@@ -13,7 +13,14 @@ netcdf_data:
       # - path: pyplume.gapfilling.SmoothnStep
       #   args:
       #     mask: data/field_netcdfs/tj_plume_1km_2022-09_mask.npy
-  alongshore: data/field_netcdfs/tj_plume_alongshore_2022-09.nc
+    alongshore: data/field_netcdfs/tj_plume_alongshore_2022-09.nc
+  - name: hfrnet oi
+    data: data/field_netcdfs/oi_fields/Tot_SDLJ_202209.nc
+    time_range:
+      # Hurricane Kay timespan
+      - 2022-09-08T06:00
+      - 2022-09-12T00:00
+    alongshore: data/field_netcdfs/oi_fields/Tot_SDLJ_202209_alongshore.nc
 parcels_config:
   save_dir: results
   particle_type: pyplume.kernels.ThreddsParticle
