--- a/configs/palau-sarop-2023-03.yaml
+++ b/configs/palau-sarop-2023-03.yaml
@@ -1,30 +1,31 @@
 ocean_data:
   - name: copernicus
     data: data/field_netcdfs/cmems_mod_glo_phy_anfc_merged-uv_PT1H-i_1677893029445.nc
-    allow_time_extrapolation: true
+    allow_time_extrapolation: false
     time_range: [2023-03-03T03, 2023-03-04T06]
-    # gapfill_steps:
-    #   # DCT-PLS gapfilling. It's very aggressive on smoothing.
-    #   - path: pyplume.gapfilling.DCTPLS
-    #     args:
-    #       exclude_oob: false
     wind:
       data: data/winds1.mat
       ratio: 0.15
       incoming: False
   - name: hycom
     data: data/field_netcdfs/FMRC_GLBy0.08_930_FMRC_best (2).nc4
-    # datasource: pyplume.thredds_data.SRC_THREDDS_HYCOM
-    allow_time_extrapolation: true
+    allow_time_extrapolation: false
     time_range: [2023-03-03T03, 2023-03-04T06]
-    # gapfill_steps:
-      # - path: pyplume.gapfilling.DCTPLS
-      #   args:
-      #     exclude_oob: false
     wind:
       data: data/winds1.mat
       ratio: 0.15
       incoming: False
+  - name: hfr hycom filled
+    data: data/field_netcdfs/hfr_2023_03_new.nc
+    allow_time_extrapolation: false
+    time_range: [2023-03-03T03, 2023-03-04T06]
+    gapfill_steps:
+      - path: pyplume.gapfilling.LowResOversample
+        args:
+          references: [data/field_netcdfs/FMRC_GLBy0.08_930_FMRC_best (2).nc4]
+    wind:
+      path: data/mets1.mat
+      ratio: 0.03
 parcels_config:
   save_dir: results
   particle_type: pyplume.kernels.ThreddsParticle
