--- a/configs/huntington_all.yaml
+++ b/configs/huntington_all.yaml
@@ -1,7 +1,7 @@
 ocean_data:
   - name: hfrnet
     data: http://hfrnet-tds.ucsd.edu/thredds/dodsC/HFR/USWC/6km/hourly/RTV/HFRADAR_US_West_Coast_6km_Resolution_Hourly_RTV_best.ncd
-    time_range: [2021-10-01, 2021-10-09]
+    time_range: [2021-10-01T00:00, 2021-10-09T00:00]
     lat_range: [32, 34.2]
     lon_range: [-119, -117.4]
     gapfill_steps: []
@@ -70,9 +70,13 @@ parcels_config:
 postprocess_config: {}
 save_snapshots: true
 plotting_config:
-  shown_domain:
-    S: 33
-    N: 34
-    W: -118.5
-    E: -117.4
-  draw_coasts: true
+  plots:
+    - type: pyplume.resultplots.ParticlePlot
+      label: particleplots
+      coastline: true
+      draw_currents: true
+      domain:
+        S: 33
+        N: 34
+        W: -118.5
+        E: -117.4
