--- a/configs/tijuana_hurrkay.yaml
+++ b/configs/tijuana_hurrkay.yaml
@@ -3,12 +3,12 @@ ocean_data:
     data: data/field_netcdfs/tj_plume_1km_2022-09.nc
     # Hurricane Kay timespan
     time_range: [2022-09-08T06:00, 2022-09-12T00:00]
-    gapfill_steps:
-      - path: pyplume.gapfilling.LowResOversample
-        args:
-          references:
-            - http://hfrnet-tds.ucsd.edu/thredds/dodsC/HFR/USWC/2km/hourly/RTV/HFRADAR_US_West_Coast_2km_Resolution_Hourly_RTV_best.ncd
-            - http://hfrnet-tds.ucsd.edu/thredds/dodsC/HFR/USWC/6km/hourly/RTV/HFRADAR_US_West_Coast_6km_Resolution_Hourly_RTV_best.ncd
+    # gapfill_steps:
+    #   - path: pyplume.gapfilling.LowResOversample
+    #     args:
+    #       references:
+    #         - http://hfrnet-tds.ucsd.edu/thredds/dodsC/HFR/USWC/2km/hourly/RTV/HFRADAR_US_West_Coast_2km_Resolution_Hourly_RTV_best.ncd
+    #         - http://hfrnet-tds.ucsd.edu/thredds/dodsC/HFR/USWC/6km/hourly/RTV/HFRADAR_US_West_Coast_6km_Resolution_Hourly_RTV_best.ncd
       # DCT-PLS gapfilling. It's very aggressive on smoothing.
       # - path: pyplume.gapfilling.SmoothnStep
       #   args:
@@ -40,55 +40,46 @@ parcels_config:
 postprocess_config: {}
 save_snapshots: true
 plotting_config:
-  shown_domain:
-    S: 32.525
-    N: 32.7
-    W: -117.27
-    E: -117.09
-  draw_coasts: false
-  plot_features:
-    - path: pyplume.plot_features.ParticleDensityFeature
-      label: particle_density
-      args:
-        domain:
-          S: 32.525
-          N: 32.7
-          W: -117.27
-          E: -117.09
-        coastline: data/coastOR2Mex_tijuana.mat
-    - path: pyplume.plot_features.NanSeparatedFeature
-      label: coastline
-      args:
-        data: data/coastOR2Mex_tijuana.mat
-        color: k
-    - path: pyplume.plot_features.StationFeature
-      label: station
-      args:
-        data: data/wq_stposition.mat
-        labels:
-          - Coronado (North Island)
-          - Silver Strand
-          - Silver Strand Beach
-          - Carnation Ave.
-          - Imperial Beach Pier
-          - Cortez Ave.
-          - End of Seacoast Dr.
-          - 3/4 mi. N. of TJ River Mouth
-          - Tijuana River Mouth
-          - Monument Rd.
-          - Board Fence
-          - Mexico
-        track_dist: 1000
-    - path: pyplume.plot_features.NearcoastDensityFeature
-      label: nearcoast_density
-      args:
-        origin:
-          - 32.556772435531
-          - -117.13016494831
-        stations: data/wq_stposition.mat
-        coastline: data/coastline.mat
-        xlim:
-          - -16
-          - 4
-        ymax: 1
-        track_dist: 900
+  plots:
+    - type: pyplume.resultplots.ParticleWithTrackedPointsPlot
+      label: particleplots
+      coastline: data/coastOR2Mex_tijuana.mat
+      draw_currents: true
+      domain:
+        S: 32.525
+        N: 32.7
+        W: -117.27
+        E: -117.09
+      tracked_points: data/wq_stposition.mat
+      track_dist: 1000
+    - type: pyplume.resultplots.NearcoastDensityHistogram
+      origin: [32.556772435531, -117.13016494831]
+      tracked_points: data/wq_stposition.mat
+      coastline: data/coastline.mat
+      xlim: [-16, 4]
+      ymax: 1
+      track_dist: 1000
+      plot_size: [6.1, 2.5]
+    - type: pyplume.resultplots.StationTable
+      station_points: data/wq_stposition.mat
+      station_labels:
+        - Coronado (North Island)
+        - Silver Strand
+        - Silver Strand Beach
+        - Carnation Ave.
+        - Imperial Beach Pier
+        - Cortez Ave.
+        - End of Seacoast Dr.
+        - 3/4 mi. N. of TJ River Mouth
+        - Tijuana River Mouth
+        - Monument Rd.
+        - Board Fence
+        - Mexico
+      track_dist: 1000
+    - type: pyplume.resultplots.CumulativeParticleDensityPlot
+      domain: 
+        S: 32.525
+        N: 32.7
+        W: -117.27
+        E: -117.09
+      coastline: data/coastOR2Mex_tijuana.mat
