--- a/configs/tijuana_hurrkay.yaml
+++ b/configs/tijuana_hurrkay.yaml
@@ -25,7 +25,8 @@ parcels_config:
   save_dir: results
   particle_type: pyplume.kernels.ThreddsParticle
   kernels:
-    - pyplume.kernels.AdvectionRK4BorderCheck
+    # - pyplume.kernels.AdvectionRK4BorderCheck
+    - AdvectionRK4
     - pyplume.kernels.AgeParticle
     - pyplume.kernels.RandomWalk5cm
     - pyplume.kernels.DeleteAfter3Days
@@ -35,8 +36,8 @@ parcels_config:
   repetitions: -1
   instances_per_spawn: 1
   spawn_points: data/spawn_points_mats/glist90zj_pts_position_spawn.mat
-  simulation_dt: 600
-  snapshot_interval: 1800
+  simulation_dt: 1200
+  snapshot_interval: 3600
 postprocess_config: {}
 plotting_config:
   plots:
