--- a/configs/tijuana_hurrkay.yaml
+++ b/configs/tijuana_hurrkay.yaml
@@ -14,6 +14,7 @@ ocean_data:
       #   args:
       #     exclude_oob: True
     alongshore: data/field_netcdfs/tj_plume_alongshore_2022-09.nc
+    allow_time_extrapolation: True
   - name: hfrnet oi
     data: data/field_netcdfs/oi_fields/Tot_SDLJ_202209.nc
     time_range:
@@ -21,6 +22,7 @@ ocean_data:
       - 2022-09-08T06:00
       - 2022-09-12T00:00
     alongshore: data/field_netcdfs/oi_fields/Tot_SDLJ_202209_alongshore.nc
+    allow_time_extrapolation: True
 parcels_config:
   save_dir: results
   particle_type: pyplume.kernels.ThreddsParticle
@@ -52,14 +54,14 @@ plotting_config:
         E: -117.09
       tracked_points: data/wq_stposition.mat
       track_dist: 1000
-    - type: pyplume.resultplots.NearcoastDensityHistogram
-      origin: [32.556772435531, -117.13016494831]
-      tracked_points: data/wq_stposition.mat
-      coastline: data/coastline.mat
-      xlim: [-16, 4]
-      ymax: 1
-      track_dist: 1000
-      plot_size: [6.1, 2.5]
+    # - type: pyplume.resultplots.NearcoastDensityHistogram
+    #   origin: [32.556772435531, -117.13016494831]
+    #   tracked_points: data/wq_stposition.mat
+    #   coastline: data/coastline.mat
+    #   xlim: [-16, 4]
+    #   ymax: 1
+    #   track_dist: 1000
+    #   plot_size: [6.1, 2.5]
     - type: pyplume.resultplots.StationTable
       station_points: data/wq_stposition.mat
       station_labels:
