--- a/configs/codar_sim_test.yaml
+++ b/configs/codar_sim_test.yaml
@@ -2,7 +2,6 @@ ocean_data:
   - name: nycodar_hfr
     data: data/codar_thing/NYCODAR_2021_2022_cruise1.nc
     allow_time_extrapolation: false
-    time_range: [START, END]
 parcels_config:
   save_dir: results
   particle_type: pyplume.kernels.ThreddsParticle
@@ -10,17 +9,19 @@ parcels_config:
     - parcels.AdvectionRK4
     - pyplume.kernels.RandomWalk5cm
     - pyplume.kernels.AgeParticle
-  time_range: [2021-04-15T15:00, 2021-04-18T15:00]
+    - pyplume.kernels.DeleteStatusOutOfBounds
+  time_range: [2021-05-21T00:00, 2021-05-26T00:00]
   repeat_dt: 3600
   repetitions: 10
   instances_per_spawn: 1
-  spawn_points:
-    - label: release
-      point: [40, -72.8]
-      pattern:
-        type: grid
-        size: 15
-        gapsize: 0.005
+  spawn_points: data/codar_thing/StationPts.mat
+  # spawn_points:
+  #   - label: release
+  #     point: [40, -72.8]
+  #     pattern:
+  #       type: grid
+  #       size: 15
+  #       gapsize: 0.005
   simulation_dt: -1200
   snapshot_interval: 7200
 postprocess_config: {}
@@ -31,10 +32,10 @@ plotting_config:
       coastline: true
       draw_currents: false
       domain:
-        S: 39
-        N: 41
-        W: -73.5
-        E: -72
+        S: 37.9
+        N: 41.3
+        W: -75
+        E: -71
       # addons:
       #   - type: pyplume.resultplots.AddScatter
       #     data: data/codar_thing/StationPts.mat
